--- a/build.gradle
+++ b/build.gradle
@@ -66,8 +66,7 @@ repositories {
         implementation "edu.csudh.lsu.persistence:csudh-lsu-cockroachdb-persistance:${cockroachPersistenceVersion}"
 
         // Swagger
-        implementation 'io.springfox:springfox-swagger2:3.0.0'
-        implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+        implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
         // Lombok
         compileOnly 'org.projectlombok:lombok'
@@ -108,3 +107,12 @@ repositories {
         }
     }
 }
+
+def buildTimestamp = new Date().format("yyyy-MM-dd'T'HH:mm:ss'Z'")
+
+processResources {
+    filesMatching('**/application.yml') {
+        expand(buildTimestamp: buildTimestamp)
+    }
+}
+
