--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Define the CockroachDB Persistence version
-cockroachPersistenceVersion=v0.0.15
+cockroachPersistenceVersion=v0.0.16
 
 # Other configurations
 sharedLoggingVersion=3.7.0
@@ -15,3 +15,7 @@ artifactoryPassword=ReadPermanent
 # System properties
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 releaseBuild=false
+
+gpr.user=your-github-username
+gpr.token=your-github-token
+
